# cortex-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION.md  GAPS.md  MIGRATION.md  README.md  ROLES_AND_PRIVILEGES.md  SKILL-GUIDELINES.md  SKILL.md  USAGE.md  config.yml  pyproject.toml
sql-migration/INFA2DBT/: CHANGELOG.md  DOCUMENTATION.md  MIGRATION.md  README.md  SKILL.md  USAGE.md  config.yml  pyproject.toml
sql-migration/INFA2DBT/agents/conversion-fidelity-scorer/: SKILL.md
sql-migration/INFA2DBT/agents/dbt-sql-optimizer/: SKILL.md
sql-migration/INFA2DBT/agents/dbt-sql-optimizer/references/: optimization-patterns.md
sql-migration/INFA2DBT/agents/dbt-validation-critique/: SKILL.md
sql-migration/INFA2DBT/agents/infa-to-dbt-converter/: SKILL.md
sql-migration/INFA2DBT/agents/infa-xml-parser/: SKILL.md
sql-migration/INFA2DBT/agents/phase1-handoff/: SKILL.md
sql-migration/INFA2DBT/agents/roi-subgraph-scorer/: SKILL.md
sql-migration/INFA2DBT/artifacts/handoffs/: _summary.json  mart_comp_time_daily_tbl_handoff.json  mart_comp_time_date_file_handoff.json  mart_comptime_message_file_handoff.json  mart_counter_tbl_handoff.json  mart_td_tgt_handoff.json  mart_tgt_td_table_handoff.json
sql-migration/INFA2DBT/examples/example-03-comptime-flatfile/: README.md
sql-migration/INFA2DBT/references/: coding-guidelines-template.md  monitoring-queries.md  rag-corpus.md  snowflake-objects.md  state-management.md  transformation-type-map.md
sql-migration/INFA2DBT/src/: agent1_parser.py  agent2_converter_v2.py
sql-migration/INFA2DBT/tests/: __init__.py
(+43959 files in other folders)
